# duplicate_scanner

./: .gitignore  CMakeLists.txt
directory_scanner/: exceptions.h  file_comparator.cpp  file_comparator.h  scanner.cpp  scanner.h  worker.cpp  worker.h
hw1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt
src/directory_scanner/: file_comparator.cpp  file_comparator.h  worker.cpp
src/hw1/: hw1.pro  mainwindow.cpp  mainwindow.ui
test/src/: CMakeLists.txt  internal_tests.cpp
util/: main.cpp
